log
Fri 21 Apr 2023 06:32:36 PM UTC: 
 tests:  1|8
total_score: 0/70
8ba0ce8
Fri 21 Apr 2023 06:54:45 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
a601d32
Fri 21 Apr 2023 06:55:24 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
cd28804
Fri 21 Apr 2023 07:15:12 PM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|0
647d259
Fri 21 Apr 2023 07:21:00 PM UTC: 
 treemap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  0|0
02ca6ad
Fri 21 Apr 2023 07:21:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
97cb2f6
Fri 21 Apr 2023 07:26:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
b041cb8
Fri 21 Apr 2023 07:26:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
e8b8039
Fri 21 Apr 2023 07:31:43 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
262931c
Fri 21 Apr 2023 07:32:55 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
   92 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c5c172e
Fri 21 Apr 2023 07:33:03 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|7
total_score: 5/70
4a372d1
Fri 21 Apr 2023 07:34:56 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  8|7
total_score: 5/70
d54266e
Fri 21 Apr 2023 07:39:57 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
4a2295c
